--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@truffle/hdwallet-provider": "^1.1.0",
     "babel": "^6.23.0",
     "bootstrap": "^4.5.2",
     "chai": "^4.2.0",
@@ -14,9 +15,11 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
+    "solc": "^0.5.16",
     "styled-components": "^5.2.0",
     "truffle": "^5.1.46",
     "truffle-assertions": "^0.9.2",
+    "truffle-hdwallet-provider": "^1.0.17",
     "web3": "^1.3.0"
   },
   "scripts": {
@@ -39,5 +42,21 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "truffle-config.js",
+  "directories": {
+    "test": "test"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/andrew-fleming/coinflip-testnet.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/andrew-fleming/coinflip-testnet/issues"
+  },
+  "homepage": "https://github.com/andrew-fleming/coinflip-testnet#readme"
 }
